<resources>
    <string name="app_name">My Application8</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">ManufakturLaden</string>
    <string name="nav_header_subtitle">Your first choice for high quality product shopping far away from civilisation</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid</string>
    <string name="error_invalid_password">This password is wrong</string>
    <string name="error_incorrect_password">login incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Payment</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_name_user">Your name</string>
    <string name="pref_default_display_name">Name</string>


    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="credit_card_back_code_default" translatable="false">123</string>
    <string name="credit_card_back_code">Code on Credit Card back</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="all_products">All products</string>
    <string name="logout">Logout</string>
    <string name="my_account_and_settings">My account and settings</string>
    <string name="my_orders">My orders</string>
    <string name="buy_all">Buy all</string>
    <string name="alarm_title">Order is on its way!</string>
    <string name="alarm_text">Thank you for your order!</string>
    <string name="refresh_products">refresh products</string>
    <string name="no_items_in_shoppingcart">No Items in shopping cart yet!</string>
    <string name="bought_all">bought all</string>
    <string name="failure_shopping_cart_empty">failure: Your shopping cart is empty</string>
    <string name="delete_from_cart">delete from cart</string>
    <string name="category">category</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="Item_added_to_shopping_cart">Item added to shopping cart</string>
    <string name="quantity">quantity</string>
    <string name="enter_quantity">enter quantity:</string>
    <string name="change_quantity">Change quantity</string>
    <string name="failure_quantity_empty">Caution: no quantity entered</string>

</resources>
