<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="txt_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_name_user"
        android:id="@+id/txt_username"/>
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="nr_creditcard"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/credit_card_number"
        android:id="@+id/nr_creditcard"/>
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/credit_card_back_code_default"
        android:inputType="textCapWords"
        android:key="code_creditcard"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/credit_card_back_code"
        android:id="@+id/code_creditcard"/>



</PreferenceScreen>
