<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/shopping_cart" />
        <item
            android:id="@+id/nav_all_products"
            android:title="@string/all_products" />
       <!-- <item
            android:id="@+id/nav_hats"
            android:title="Hats" />
        <item
            android:id="@+id/nav_shoes"
            android:title="Shoes" />-->
        <item
            android:id="@+id/act_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/my_account_and_settings" />
        <!--<item
            android:id="@+id/nav_orders"
            android:title="@string/my_orders" />-->
    </group>



</menu>

